# mcp-server

./: Cargo.toml  Makefile  README.md
src/: agent_mcp.rs  context.rs  main.rs
src/common/: accounts.rs  context.rs  mod.rs
src/tools/: agent_mcp.rs  brave_tools.rs  eth_tools.rs  mod.rs  traits.rs  uniswap_tools.rs  zero_x_tools.rs
