[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
rmcp = { version = "0.3.2", features = ["server", "transport-sse-server"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7.15"
axum = { version = "0.8", features = ["macros"] }
cast = { git = "https://github.com/foundry-rs/foundry", tag = "v1.3.0"}
ethers = "2.0"
alloy-primitives = "1.1.0"
alloy-provider = "1.0.3"